syntax = "proto3";

package api.explorer.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

import "explorer/v1/common.proto";

option go_package = "explorer/api/explorer/v1;v1";
option java_multiple_files = true;
option java_package = "api.explorer.v1";

service User {
  rpc Register(RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post : "/user/v1/register",
      body : "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post : "/user/v1/login",
      body : "*"
    };
  }

  rpc RefreshToken(google.protobuf.Empty) returns (LoginReply) {
    option (google.api.http) = {
      get : "/user/v1/refresh_token",
    };
  }

  rpc Logout(google.protobuf.Empty) returns (LogoutReply) {
    option (google.api.http) = {
      get : "/user/v1/logout",
    };
  }

  rpc Update(UpdateUserRequest) returns (UpdateUserReply) {
    option (google.api.http) = {
      post : "/user/v1/update",
      body : "*"
    };
  }

  rpc Delete(DeleteUserRequest) returns (DeleteUserReply) {
    option (google.api.http) = {
      post : "/user/v1/delete",
      body : "*"
    };
  }
}

message UserProfile {
  string username = 1;
  uint64 user_id = 2;
  repeated string permissions = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

message RegisterReply {
  UserProfile user_profile = 1;
  string token = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  UserProfile user_profile = 1;
  string token = 2;
}

message LogoutRequest {}
message LogoutReply { Status status = 1; }

message DeleteUserRequest { uint64 user_id = 1; }
message DeleteUserReply { Status status = 1; }

message UpdateUserRequest {
  uint64 user_id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}

message UpdateUserReply { Status status = 1; }
